<resources>
    <string name="http_error_unexpected">Spacebox indisponível !!</string>
    <string name="http_error_403">Acesso Negado !!</string>
    <string name="http_error_503">Serviço indisponível !!</string>
    <string name="http_error_404">Serviço não encontrado !!</string>
    <string name="http_error_500">Ocorreu um erro no servidor Spacebox !!</string>
    <string name="http_error_400">Requisição inválida !!</string>
    <string name="http_error_401">Sessão expirada, favor logar novamente !!</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="warning">Aviso</string>
    <string name="questionContinueExclusion">Deseja prosseguir e deletar este registro?</string>
    <string name="app_name">SpaceBox</string>
    <string name="close">Fechar</string>
    <string name="open">Abrir</string>
    <string name="createAccount">Registrar-se</string>
    <string name="userCreatedSuccess">Usuário registrado com sucesso !</string>
    <string name="userDataTitle">Dados do Usuário</string>
    <string name="notificationsTitle">Notificações</string>
    <string name="uploadTitle">Upload</string>
    <string name="dashboardTitle">Dashboard</string>
    <string name="successMessage">Operação reaizada com sucesso !</string>
    <string name="internetNotAvailable">Favor conectar-se a internet !</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="signin">Logar</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="register">Cadastrar</string>
    <string name="loading">Carregando ...</string>
    <string name="createFolder">Criar Pasta</string>
    <string name="save">Salvar</string>
</resources>
