<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/back_transparent"
            android:drawableLeft="@drawable/ic_tag_faces_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/back_transparent"
            android:drawableLeft="@drawable/ic_login"
            android:drawablePadding="5dp"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/back_transparent"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginText" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/back_transparent"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <android.support.v7.widget.CardView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/loginText"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:onClick="registerUser"
            app:cardBackgroundColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>